# proyecto-multilenguaje

./: .gitignore  README.md
cpp-app/: CMakeLists.txt  v1_soap.cpp  v2_traduccion.cpp  v3_nativo.cpp
dotnet-app/DotnetApp/: Program.cs  v1_soap.cs  v2_traduccion.cs  v3_nativo.cs
go-app/: go.mod  go.sum  main.go  v1_soap.go  v2_traduccion.go  v3_nativo.go
java-app/: pom.xml
java-app/src/main/java/com/multilenguaje/: Main.java  v1_soap.java  v2_traduccion.java  v3_nativo.java
node-app/: package-lock.json  package.json  v1_soap.js  v2_traduccion.js  v3_nativo.js
perl-app/: cpanfile  v1_soap.pl  v2_traduccion.pl  v3_nativo.pl
ruby-app/: Gemfile  v1_soap.rb  v2_traduccion.rb  v3_nativo.rb
rust-app/: Cargo.toml  v1_soap.rs  v2_traduccion.rs  v3_nativo.rs
